fix add button spacing;

--- a/main/static/css/tournament_details.css
+++ b/main/static/css/tournament_details.css
@@ -79,7 +79,6 @@
 }
 
 .review-wrapper {
-    clear: both;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -96,14 +95,12 @@
 }
 
 .add-button-wrapper {
-    margin-top: 1rem;
-    padding: 1rem;
+    margin: 4rem auto;
+    padding-left: 5%;
     max-width: 900px;
-    margin: 0 auto;
 }
 
 .add-button {
-    float: right;
     padding: 20px;
     background-color: darkgreen;
     color: white;
