--- a/main/static/css/tournaments.css
+++ b/main/static/css/tournaments.css
@@ -58,7 +58,6 @@
 .search-results {
     padding: 1rem;
     height: 100vh;
-    clear: both;
 }
 
 .tournaments-container {
@@ -120,14 +119,12 @@
 }
 
 .add-button-wrapper {
-    margin-top: 1rem;
-    padding: 1rem;
+    margin: 4rem auto;
+    padding-left: 5%;
     max-width: 900px;
-    margin: 0 auto;
 }
 
 .add-button {
-    float: right;
     padding: 20px;
     background-color: darkgreen;
     color: white;
